--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
+    "styled-icons": "^10.45.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
